[package]
name = "flipper-packer"
description = "Helper tool that breaks down a Flipper release into smaller artifacts."
license = "MIT"
repository = "https://github.com/facebook/flipper.git"
keywords = ["flipper", "cli"]
categories = ["development-tools"]
version = "0.3.0"
authors = ["Facebook, Inc."]
edition = "2018"

[dependencies]
clap = "2.34.0"
shellexpand = "2.1.0"
tar = "0.4.37"
serde = { version = "1.0.132", features = ["derive"] }
serde_yaml = "0.8.21"
anyhow = "1.0.52"
sha2 = "0.10.0"
data-encoding = "2.3.2"
serde_json = "1.0.67"
rayon = "1.5.1"
indicatif = "^0.15"
xz2 = "0.1.6"
ignore = "0.4.18"

[dev-dependencies]
tempdir = "0.3.7"
