[package]
name = "flipper-packer"
description = "Helper tool that breaks down a Flipper release into smaller artifacts."
license = "MIT"
repository = "https://github.com/facebook/flipper.git"
keywords = ["flipper", "cli"]
categories = ["development-tools"]
version = "0.4.0"
authors = ["Facebook, Inc."]
edition = "2021"

[dependencies]
clap = { version = "3.1.9", features = ["derive", "cargo"] }
shellexpand = "2.1.0"
tar = "0.4.38"
serde = { version = "1.0.136", features = ["derive"] }
serde_yaml = "0.8.23"
anyhow = "1.0.56"
sha2 = "0.10.2"
data-encoding = "2.3.2"
serde_json = "1.0.79"
rayon = "1.5.2"
indicatif = "^0.15"
xz2 = "0.1.6"
ignore = "0.4.18"

[dev-dependencies]
tempdir = "0.3.7"
