[package]
name = "flipper-packer"
description = "Helper tool that breaks down a Flipper release into smaller artifacts."
license = "MIT"
repository = "https://github.com/facebook/flipper.git"
keywords = ["flipper", "cli"]
categories = ["development-tools"]
version = "0.5.0"
authors = ["Facebook, Inc."]
edition = "2021"

[dependencies]
clap = { version = "^3", features = ["derive", "cargo"] }
shellexpand = "^2"
tar = "0.4.38"
serde = { version = "^1", features = ["derive"] }
serde_yaml = "0.9.14"
anyhow = "^1"
sha2 = "0.10.6"
data-encoding = "^2"
serde_json = "^1"
rayon = "^1.6"
indicatif = "^0.16"
xz2 = "0.1.7"
ignore = "0.4.18"

[dev-dependencies]
tempdir = "0.3.7"
